--- a/frontend/src/assets/main.scss
+++ b/frontend/src/assets/main.scss
@@ -8,11 +8,15 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  background-color: whitesmoke;
 }
 
 body {
   margin: 0;
-  padding: 5rem;
+  padding-top: 5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   min-width: 320px;
   min-height: 100vh;
 }
